deploy/svc.yml
# Listens externally on 80 and forwards to Pod/container on 8080
apiVersion: v1
kind: Service
metadata:
  name: simpleweb-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: "http"
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: simpleweb-app
