deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleweb-ingress
spec:
  rules:
    - host: simpleweb.dadolfi.dev
      http:
        paths:
          - path: /
            pathType: "Exact"
            backend:
              service:
                name: simpleweb-lb
                port: 
                  number: 80
